# MDMPyClient

./: .coverage  .gitignore  .prospector.yaml  LICENSE  README.md  requirements.txt  requirements_build.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml  tox.yml
.test_report/: coverage.xml
MDMPyClient.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
configuracion/: Configuracion.yaml  configuracion.yaml  consultas.yaml  traducciones.yaml
docs/: .readthedocs.yaml  conf.py  index.rst
mdm_data/categoryschemes/: IECA_CAT_EN_ES.xml
mdm_data/codelists/: CL_ICMA_TIPOVENTAS.xml  CL_IVGS_SERIEIVGS.xml  CL_OBS_STATUS.xml  CL_SEX.xml  CL_TEMPORAL.xml  CL_TERRITORIO.xml  CL_TIPINDOCUPAC.xml  CL_TIPOSERIES.xml  CL_TIPOVENTAS.xml  CL_UNIT.xml
mdm_data/conceptschemes/: CROSS_DOMAIN_CONCEPTS.xml  CS_BUSINESS_STAT.xml  CS_DEMOGRAPHY.xml  CS_ECO_ACCOUNTS.xml  CS_MSD.xml  CS_SERVICES.xml
mdm_data/dataflows/: DF_IASS_6525.xml  DF_IASS_6528.xml  DF_IASS_6530.xml  DF_IVGSA_15454.xml  DF_IVGSA_15460.xml  DF_IVGSA_15461.xml  DF_IVGSA_15462.xml  DF_IVGSA_15463.xml  DF_IVGSA_15464.xml  DF_IVGSA_15465.xml  DF_IVGSA_15466.xml  DF_IVGSA_15467.xml  DF_IVGSA_15468.xml  DF_IVGSA_15469.xml  DF_IVGSA_15470.xml
mdm_data/dsds/: DSD_IASS.xml  DSD_ICMA.xml  DSD_IVGSA.xml
mdm_data/origin/: CL_OBS_STATUS+ESTAT+2.2.xml  CL_SEX+SDMX+2.1.xml  CROSS_DOMAIN_CONCEPTS+SDMX+2.0.xml  ESTAT+CS_DEMOGRAPHY+1.2.xml  (+2 more)
mdmpyclient/: __init__.py  main.py  mdm.py
src/: main.py  main_general.py
tests/: codelists_test.py  mdm_test.py  test_primero.py
(+56 files in other folders)
