[bumpversion]
current_version = 0.0.0
commit = False
tag = False

[metadata]
package_name = MDMPyClient
description_file = README.md
python_version = 3.10

[bdist_wheel]
universal = 0

[wheel]
plat-name = any

[bumpversion:file:src/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:setup.py]
search = {current_version}
replace = {new_version}
